# ENGR-101-raspberry-pi-shared-library

./: CMakeLists.txt  engr101.h  main.cpp  main.h
examples/line_reader/: main.c
lib/camera/: camera.cpp
